@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 1.9-3
-Date: 2012/12/15
+Date: 2012/12/19
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Liviu", "Andronic", role = "ctb"),
@@ -26,7 +26,8 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("Miroslav", "Ristic", role = "ctb"),
     person("Peter", "Wolf", role = "ctb")
    )
-Depends: R (>= 2.14.0), tcltk, grDevices, utils, car (>= 2.0-15)
+Depends: R (>= 2.14.0), grDevices, utils, car (>= 2.0-15)
+Imports: tcltk
 Suggests: abind, aplpack, colorspace, effects (>= 1.0-7), e1071, foreign, grid, Hmisc, lattice, leaps, lmtest, MASS, mgcv, multcomp (>= 0.991-2), nlme, nnet, relimp, rgl, RODBC, sem (>= 2.1-1) 
 ByteCompile: yes
 Description:
