@@ -1,13 +1,14 @@
 
 # The R Commander and command logger
 
-# last modified 2012-12-15 by J. Fox
+# last modified 2012-12-19 by J. Fox
 #  applied patch to improve window behaviour supplied by Milan Bouchet-Valat 2011-09-22
 #   slight changes 12 Aug 04 by Ph. Grosjean
 #   changes 21 June 2007 by Erich Neuwirth for Excel support (marked EN)
 #   modified 17 December 2008 by Richard Heiberger  ##rmh
 
 Commander <- function(){
+    library(Rcmdr, quietly=TRUE)
 	RStudioP <- function() nzchar(Sys.getenv("RSTUDIO_USER_IDENTITY"))
 	DESCRIPTION <- readLines(file.path(.find.package("Rcmdr"), "DESCRIPTION")[1])
 	RcmdrVersion <- trim.blanks(sub("^Version:", "",
@@ -21,7 +22,7 @@ Commander <- function(){
 	if (exists(".RcmdrEnv") && is.environment(RcmdrEnv()) &&
 	        exists("commanderWindow", RcmdrEnv()) &&
 	        !is.null(get("commanderWindow", RcmdrEnv()))) {
-		warning("The R Commander is already open.")
+#		warning("The R Commander is already open.")
 		return(invisible(NULL))
 	}
 	if (is.SciViews()) return(invisible(svCommander(Version=RcmdrVersion))) # +PhG
