@@ -1,15 +1,21 @@
-# last modified 2012-12-07 by J. Fox
+# last modified 2012-12-19 by J. Fox
 #  applied patch to improve window behaviour supplied by Milan Bouchet-Valat 2011-09-22
 
 .onAttach <- function(...){
-	if(interactive()) Commander()
-	else {
-		packageStartupMessage("The Commander GUI is launched only in interactive sessions",
-				domain="R-Rcmdr")
-		return()
-	}
-	packageStartupMessage(gettext("\nRcmdr Version", domain="R-Rcmdr"), " ",
-			getRcmdr("RcmdrVersion"), "\n")
+    if(interactive()){
+        if (!(exists(".RcmdrEnv") && is.environment(RcmdrEnv()) &&
+                 exists("commanderWindow", RcmdrEnv()) &&
+                 !is.null(get("commanderWindow", RcmdrEnv())))){
+            Commander()
+            packageStartupMessage(gettext("\nRcmdr Version", domain="R-Rcmdr"), " ",
+                                  getRcmdr("RcmdrVersion"), "\n")
+        }
+    }
+    else {
+        packageStartupMessage("The Commander GUI is launched only in interactive sessions",
+                              domain="R-Rcmdr")
+        return()
+    }
 }
 
 .onLoad <- function(...){
